<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.review.AddRestaurantReviewActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="?attr/toolbarWithArrowButtonStyle"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/add_restaurant_review" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/toolbarDivision"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_226"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/review_title"
        android:hint="@string/review_title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarDivision" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleEditText"
        app:layout_constraintStart_toStartOf="@id/titleEditText"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/review_content"
        android:hint="@string/review_content"
        android:inputType="text"
        android:maxLength="21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/photoRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/imageAddButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentEditText"
        app:spanCount="2"
        tools:itemCount="10"
        tools:listitem="@layout/viewholder_photo_item" />

    <Button
        android:id="@+id/imageAddButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/add_image"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add_review"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/primaryColor"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>