<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="?attr/toolbarStyle"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/locationTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="현재 위치" />

        <ProgressBar
            android:id="@+id/locationLoading"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/primaryColor" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/gray_168"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout" />

    <HorizontalScrollView
        android:id="@+id/filterScrollView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filterChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            app:checkedChip="@id/chipDefault"
            app:chipSpacingHorizontal="4dp"
            app:chipSpacingVertical="6dp"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipInitialize"
                style="@style/Widget.FoodDeliveryApp.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initialize"
                android:visibility="gone" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFastDelivery"
                style="@style/Widget.FoodDeliveryApp.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast_delivery" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLowDeliveryTip"
                style="@style/Widget.FoodDeliveryApp.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_delivery_tip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDefault"
                style="@style/Widget.FoodDeliveryApp.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_order" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipManyOrder"
                style="@style/Widget.FoodDeliveryApp.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/many_order" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTopRate"
                style="@style/Widget.FoodDeliveryApp.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rate" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterScrollView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/basketGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="basketButtonContainer, basketCountTextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/basketButtonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/basketButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/primaryColor"
            android:contentDescription="@string/no_image_found"
            android:src="@drawable/ic_shopping_basket"
            app:fabCustomSize="72dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="38dp"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/basketCountTextView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/bg_oval_stroke_1_primary"
        android:gravity="center"
        android:textColor="@color/primaryColor"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/basketButtonContainer"
        app:layout_constraintEnd_toEndOf="@id/basketButtonContainer"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="@id/basketButtonContainer"
        app:layout_constraintTop_toTopOf="@id/basketButtonContainer"
        app:layout_constraintVertical_bias="0.35"
        tools:text="1" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loadingSuccessGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:constraint_referenced_ids="tabLayout, filterScrollView, viewPager" />

</androidx.constraintlayout.widget.ConstraintLayout>