<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".presentation.home.restaurant.detail.RestaurantDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="false"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="false"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@android:color/transparent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/restaurantImageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/black"
                    android:contentDescription="@string/no_image_found"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/white"
                    android:elevation="16dp"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/restaurantMainTitleTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="24dp"
                            android:layout_marginTop="16dp"
                            android:gravity="center_horizontal"
                            android:textColor="@color/black"
                            android:textSize="32sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="음식점 이름" />

                        <RatingBar
                            android:id="@+id/ratingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:isIndicator="true"
                            android:progressTint="@color/orange_yellow"
                            app:layout_constraintEnd_toStartOf="@id/ratingTextView"
                            app:layout_constraintHorizontal_chainStyle="packed"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/restaurantMainTitleTextView"
                            tools:rating="4.5" />

                        <TextView
                            android:id="@+id/ratingTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textColor="@color/black"
                            android:textSize="32sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@id/ratingBar"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/ratingBar"
                            app:layout_constraintTop_toTopOf="@id/ratingBar"
                            tools:text="4.5" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="64dp"
                            android:orientation="horizontal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ratingBar">

                            <Button
                                android:id="@+id/callButton"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="@android:color/transparent"
                                android:text="@string/call"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:visibility="gone"
                                tools:visibility="visible" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1">

                                <Button
                                    android:id="@+id/likeButton"
                                    android:layout_width="0dp"
                                    android:layout_height="0dp"
                                    android:background="@android:color/transparent"
                                    android:textColor="@color/black"
                                    android:textSize="16sp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/likeTextView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:clickable="false"
                                    android:drawablePadding="8dp"
                                    android:elevation="16dp"
                                    android:text="@string/like"
                                    android:textColor="@color/black"
                                    android:textSize="16sp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:drawableStartCompat="@drawable/ic_heart_enable" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <Button
                                android:id="@+id/shareButton"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="@android:color/transparent"
                                android:text="@string/share"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/deliveryTitleLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/deliveryLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cardViewContainer">

                    <TextView
                        android:id="@+id/deliveryTimeTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/deliveryTipTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/tip"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/deliveryLayout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="16dp"
                    app:layout_constraintBottom_toBottomOf="@id/deliveryTitleLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/deliveryTitleLayout"
                    app:layout_constraintTop_toTopOf="@id/deliveryTitleLayout">

                    <TextView
                        android:id="@+id/deliveryTimeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="48~63분 소요 예정" />

                    <TextView
                        android:id="@+id/deliveryTipTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        tools:text="1000원 ~ 2400원" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="?attr/toolbarWithArrowButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:gravity="center"
                android:minHeight="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@+id/restaurantTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="음식점 이름" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/menuAndReviewTabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/menuAndReviewViewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menuAndReviewTabLayout" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="@id/menuAndReviewViewPager"
            app:layout_constraintEnd_toEndOf="@id/menuAndReviewViewPager"
            app:layout_constraintStart_toStartOf="@id/menuAndReviewViewPager"
            app:layout_constraintTop_toTopOf="@id/menuAndReviewViewPager" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/basketGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="basketButtonContainer, basketCountTextView"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/basketButtonContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/basketButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/primaryColor"
                android:contentDescription="@string/no_image_found"
                android:src="@drawable/ic_shopping_basket"
                app:fabCustomSize="72dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:maxImageSize="38dp"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/basketCountTextView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/bg_oval_stroke_1_primary"
            android:gravity="center"
            android:textColor="@color/primaryColor"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/basketButtonContainer"
            app:layout_constraintEnd_toEndOf="@id/basketButtonContainer"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toStartOf="@id/basketButtonContainer"
            app:layout_constraintTop_toTopOf="@id/basketButtonContainer"
            app:layout_constraintVertical_bias="0.35"
            tools:text="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>